<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="btn_start">Start</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_prev">Previous</string>
    <string name="btn_nex">Next</string>
    <string name="view_Api">API</string>
    <string name="view_Title">Title</string>
    <string name="view_Number">Number of result</string>
    <string name="view_type">Search Type</string>
    <string name="view_channel">Channel</string>
    <string name="view_id">Video Id</string>
    <string name="btn_Search">Search</string>
    <string name="btn_Add">Tap To Add This Video</string>

    <string name="edit_api">AIzaSyDE2igQOTyQ6XgJM03wLazUBF_zmWYWx4Q</string>    //Default API


    <string name="ngrok">http://7d590bd373c7.ngrok.io/</string>
    <string name="server">leeleelookupphp/node/audio/</string>
</resources>
